# Appolonia-Stool-Land-App-

./: manage.py  pyproject.toml
appo_lms/: asgi.py  settings.py  urls.py  wsgi.py
css/: styles.css
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20220429_0102.py  0003_auto_20220429_0145.py  0004_auto_20220429_0150.py  0005_plot.py  0006_delete_shop.py  0007_alter_plot_plot.py  0008_alter_plot_plot.py  0009_rename_owner_plot_owner_name.py  0010_alter_plot_options_plot_geom.py  0011_remove_plot_plot_plot_file_upload.py  0012_alter_plot_geom.py  0013_alter_plot_address_alter_plot_hometown_and_more.py  0014_alter_plot_address_alter_plot_hometown_and_more.py
media/uploads/: hello_7m5czDv.txt
shape/: tetteh.dbf
static/EstateAgency/: about.html  agent-single.html  agents-grid.html  blog-grid.html  blog-single.html  contact.html  index.html  property-grid.html  property-single.html
static/assets/css/: layout.css  map.css  style.css
static/assets/js/: map.js
static/css/: styles.css
static/estateassets/css/: style.css
templates/: agent-single.html  agents-grid.html  blog-grid.html  blog-single.html  contact.html  index.html  layout2.html  property-grid.html  property-single.html
templates/main/: base.html  index.html  newplot.html
templates/users/: footer.html  layout.html  login.html  signup.html  user.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
